saida_t1_g9.txt
>>> Criando links para timer.c e timer.h...
>>> Compilando...
gcc -std=c11 -o matrix_lib_test matrix_lib_test.c matrix_lib.c timer.c

- Observacao:
- Varios erros de compilacao:

matrix_lib.c:9:51: warning: ‘struct matrix’ declared inside parameter list [enabled by default]
 int scalar_matrix_mult(float scalar_value, struct matrix *matrix){
                                                   ^
matrix_lib.c:9:51: warning: its scope is only this definition or declaration, which is probably not what you want [enabled by default]
matrix_lib.c: In function ‘scalar_matrix_mult’:
matrix_lib.c:18:16: error: dereferencing pointer to incomplete type
  itens = matrix->height * matrix->width;
                ^
matrix_lib.c:18:33: error: dereferencing pointer to incomplete type
  itens = matrix->height * matrix->width;
                                 ^
matrix_lib.c:20:14: error: dereferencing pointer to incomplete type
  aux = matrix->rows;
              ^
matrix_lib.c: At top level:
matrix_lib.c:32:79: warning: ‘struct matrix’ declared inside parameter list [enabled by default]
 int matrix_matrix_mult(struct matrix *matrixA, struct matrix *matrixB, struct matrix *matrixC){
                                                                               ^
matrix_lib.c: In function ‘matrix_matrix_mult’:
matrix_lib.c:38:69: error: dereferencing pointer to incomplete type
  if(matrixA == NULL || matrixB == NULL || matrixC == NULL || matrixA->width != matrixB->height){
                                                                     ^
matrix_lib.c:38:87: error: dereferencing pointer to incomplete type
  if(matrixA == NULL || matrixB == NULL || matrixC == NULL || matrixA->width != matrixB->height){
                                                                                       ^
matrix_lib.c:42:16: error: dereferencing pointer to incomplete type
  auxA = matrixA->rows;
                ^
matrix_lib.c:43:16: error: dereferencing pointer to incomplete type
  auxB = matrixB->rows;
                ^

- Erros corrigidos com o #include "matrix_lib.h" no modulo matrix_lib.c. (-0,5)

- Nova execucao:


>>> Criando links para timer.c e timer.h...
>>> Compilando...
gcc -std=c11 -o matrix_lib_test matrix_lib_test.c matrix_lib.c timer.c
>>> Tecle <ENTER> para executar...
./matrix_lib_test 2.0 1024 1024 1024 1024 /home/oliveira/2022.2/floats_1048576_1.0f.dat /home/oliveira/2022.2/floats_1048576_5.0f.dat result1.dat result2.dat
Matrix A - 
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
Matrix B - 
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
5
Tempo função 1: 2.064000 ms
Matrix C -
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
2
Tempo função 2: 4981.950195 ms
Tempo total: 5055.710938 ms

>>> Verificando resultados...
resuilt1.dat...OK
resuilt2.dat...OK

- Observacoes:
- A funcao matrix_matrix_mult pressupoe que a matriz C esta zerada, o que pode provocar
problema no caso dessa premissa ser falsa. Deveria zerar os cij no primeiro uso deles.
(-0,5)
